# MYDROPBOX

./: README.md  pyproject.toml
sync_dir/: main.py
tests/: test_sync_dir.py
